<resources>
    <string name="app_name">Pertaland</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_asset_menu">Input Aset</string>
    <string name="Image_description">image_asset</string>
    <string name="analisis_asset_menu">Analisis Aset</string>
    <string name="publikasi_asset_menu">Publikasi Aset</string>
    <string name="tab_beranda">Beranda</string>
    <string name="tab_profil">Profil</string>
    <string name="title_activity_maps_marking">Map</string>
    <string name="text_next">Lanjutkan</string>
    <string name="text_luas_tanah">Luas Tanah</string>
    <string name="text_nama_tanah">Nama Bidang</string>
    <string name="text_lokasi">Lokasi</string>
    <string name="text_keterangan">Keterangan</string>
    <string name="text_content_fasilitas">Fasilitas yang ada</string>
    <string name="text_content_keterangan">Keterangan lain jika ada</string>
    <string name="text_simpan">Simpan</string>
    <string name="text_fasilitas">Fasilitas</string>
    <string name="text_lakukan_analisis">Lakukan Analisis</string>
    <string name="text_publish">Publish</string>
    <string name="text_detail_aset">Detail Aset</string>
    <string name="text_rekomendasi">Rekomendasi</string>
    <string name="text_ok">OK</string>
    <string name="nama_picker">Dino Keylas</string>
    <string name="example_gmail_com">dinokeylas@gmail.com</string>
    <string name="detail_profil">Detail Profil</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="keluar">Keluar</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="login">Login</string>
</resources>
