<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".view.activity.InputAssetActivity">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/icon_pertamina" />

            <EditText
                android:id="@+id/et_nama_tanah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_nama_tanah"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/text_luas_tanah"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_luas_tanah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/text_lokasi"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_lokasi_tanah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fasilitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_content_fasilitas"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_content_keterangan"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                android:text="@string/text_simpan"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>
